# object_pose_estimation

./: CMakeLists.txt  package.xml  setup.py
launch/: geranos_visual.launch  pifpaf.launch  pose_est.launch
msg/: KeyPoints.msg  SingleKP.msg
src/object_pose_estimation/: pifpaf_node.py  pole_pose.py  pole_pose.py.save  video_capture.py
